--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,63 @@ h1 {
     padding: 4px;
     max-width: fit-content;
     color: white;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+}
+
+h2 {
+    background-color: black;
+    padding: 4px;
+    max-width: fit-content;
+    color: white;
+    font-size: medium;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 a {
-    background-color: lightgray;
+    background-color: White;
     text-align: center;
-    color: blue;
+    color: black;
     padding: 3px;
+    border: 2px;
+    border-style: solid;
+    border-color: black;
+    list-style-type: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
 }
-li {
+
+.ul-class {
+    list-style-type: none;
+    background-color: rgb(204, 202, 202) 
+}
+
+.img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content  ;
+}
+
+ul, ol, .desc {
+    background-color: white;
+    display: block;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    max-width: fit-content;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.ul {
     list-style-type: none;
 }
